| Summary: | ASTERISK-23435: PJSIP: Fix the DNS resolution (whoops) | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2014-03-06 16:10:13.000-0600 | Date Closed: | 2014-03-17 17:54:51 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 12.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | So, unless you turn it on, PJSIP only uses {{gethostbyname}}. We forgot to turn it on. Whoops.
http://www.pjsip.org/pjsip/docs/html/group__PJSIP__RESOLVE.htm {quote} Using the Resolver To maintain backward compatibility, the resolver MUST be enabled manually. With the default settings, the resolver WILL NOT perform DNS SRV resolution, as it will just resolve the name with standard pj_gethostbyname() function. Application can enable the SRV resolver by creating the PJLIB-UTIL DNS resolver with pjsip_endpt_create_resolver(), configure the nameservers of the PJLIB-UTIL DNS resolver object by calling pj_dns_resolver_set_ns() function, and pass the DNS resolver object to pjsip_resolver_set_resolver() function. Once the resolver is set, it will be used automatically by PJSIP everytime PJSIP needs to send SIP request/response messages. {quote} We need to do that. If possible, this should just always be on. I'm not sure why we'd want the default behaviour (as it is only the default for backwards compatibility). | ||
| Comments: | |||